ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-demo-tls
  annotations:
    ingress.alb.yc.io/subnets: yc-auto-subnet-0
    ingress.alb.yc.io/external-ipv4-address: auto
    ingress.alb.yc.io/group-name: k8s-demo-ingress-group
spec:
  tls:
    - hosts:
        - lukyanov.k8s.tonnus.io
        - www.lukyanov.k8s.tonnus.io
      secretName: yc-certmgr-cert-id-fpq8fmbhec1rk5sr0pfq
  rules:
    - host: lukyanov.k8s.tonnus.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gateway
                port:
                  name: http
  
  sudo ln -s /etc/nginx/sites-available/lukyanov.k8s.tonnus.io /etc/nginx/sites-enabled/lukyanov.k8s.tonnus.io
